demo/k8s/base.yml
---

kind: Namespace
apiVersion: v1
metadata:
  name: demoapp
  labels:
    name: demoapp
