demo/k8s/backend.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: demoapp
spec:
  selector:
    matchLabels:
      app: demoapp
  replicas: 1
  template:
    metadata:
      labels:
        app: demoapp
        tier: backend
    spec:
      containers:
        - name: backend
          image: gvergne/demo-back
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demoapp
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demoapp
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}

#---

#apiVersion: networking.k8s.io/v1beta1 
#kind: Ingress
#metadata:
#  name: backend
#  namespace: demoapp
#  annotations:
#    kubernetes.io/ingress.class: nginx
#spec:
#  rules:
#    - host: demoapp
#      http:
#        paths:
#          - path: /api/backend
#            backend:
#              serviceName: backend
#              servicePort: 8080
