demo/k8s/frontend.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: demoapp
spec:
  selector:
    matchLabels:
      app: demoapp
  replicas: 1
  template:
    metadata:
      labels:
        app: demoapp
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: gvergne/demo-front
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 81
---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demoapp
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 81
    protocol: TCP
    targetPort: 81
  selector:
    app: demoapp
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}

#---

#apiVersion: networking.k8s.io/v1beta1 
#kind: Ingress
#metadata:
#  name: frontend
#  namespace: demoapp
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  rules:
#    - host: demoapp
#      http:
#        paths:
#          - path: /?(.*)
#            backend:
#              serviceName: frontend
#              servicePort: 81
