demo/k8s/postgres.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: demoapp
  labels:
    app: demoapp
spec:
  selector:
    matchLabels:
      app: demoapp
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: demoapp
        tier: database
    spec:
      containers:
        - image: postgres:11.1
          name: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-demoapp-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-demoapp-persistent-storage
          persistentVolumeClaim:
            claimName: demoapplocalvolume

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: demoapp
  labels:
    app: demoapp
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: demoapp
    tier: database
  clusterIP: None
