demo/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: frontend
  namespace: demoapp
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: demoapp
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 81
          - path: /api/backend
            backend:
              serviceName: backend
              servicePort: 8080
